--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -46,7 +46,22 @@ body {
 ::-webkit-scrollbar {
   width: 8px;
 }
+.cors {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction:row;
+  text-align: center;
+}
 
+.b1,.b2{
+  height: 160px; /* Adjust the height as needed */
+  margin:20px;
+  padding:40px;
+  width:300px;
+  border:2px solid #f8425f;
+  border-radius:30px;
+}
 /* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
@@ -82,6 +97,7 @@ a {
   text-decoration: none;
   color: #333;
   cursor: pointer;
+
 }
 
 p {
