--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -46,6 +46,44 @@ body {
 ::-webkit-scrollbar {
   width: 8px;
 }
+.images-cafe,.images-store{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 20px 10px;
+  
+}
+.images-cafe img{
+  width: 100%;
+  max-width: 350px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  position:absolute;
+  top:400px;
+}
+.images-store img{
+  width: 100%;
+  max-width: 350px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  position:absolute;
+  top:800px;
+}
+.images-cafe::after{
+  content: "";
+  width: 350px;
+}
+.images-store::after{
+  content: "";
+  width: 350px;
+}
 .cors {
   display: flex;
   justify-content: space-evenly;
@@ -104,12 +142,6 @@ p {
   line-height: 1.3;
   padding: 5px 0;
 }
-
-img {
-  width: 100%;
-  object-fit: cover;
-}
-
 button {
   border: none;
   background-color: #ffffff;
