--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -27,7 +27,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  
 }
 
 html {
@@ -46,7 +46,7 @@ body {
 ::-webkit-scrollbar {
   width: 8px;
 }
-.images-cafe,.images-store{
+.gallery {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -56,50 +56,22 @@ body {
   max-width: 1400px;
   margin: 0 auto;
   padding: 20px 10px;
-  
-}
-.images-cafe img{
-  width: 100%;
-  max-width: 350px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 10px;
-  position:absolute;
-  top:400px;
-}
-.images-store img{
-  width: 100%;
-  max-width: 350px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 10px;
-  position:absolute;
-  top:800px;
-}
-.images-cafe::after{
-  content: "";
-  width: 350px;
-}
-.images-store::after{
-  content: "";
-  width: 350px;
-}
-.cors {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction:row;
-  text-align: center;
+  margin-top:120px;
 }
 
-.b1,.b2{
-  height: 160px; /* Adjust the height as needed */
-  margin:20px;
-  padding:40px;
-  width:300px;
-  border:2px solid #f8425f;
-  border-radius:30px;
+.gallery img {
+  width: 100%;
+  max-width: 350px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
 }
+
+.gallery::after {
+  content: "";
+  width: 350px;
+}
+
 /* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
@@ -140,7 +112,6 @@ a {
 
 p {
   line-height: 1.3;
-  padding: 5px 0;
 }
 button {
   border: none;
@@ -523,8 +494,11 @@ span {
 }
 
 .hero p {
-  max-width: 400px;
+  display: flex;
+  justify-content: center; 
   font-size: 16px;
+  text-align: center;
+  padding:20px;
 }
 
 /* Come & Dine Section */
@@ -646,7 +620,10 @@ span {
 footer {
   background-color: #171819;
   color: #fff;
-  padding: 80px 0;
+  padding: 70px 0;
+  position:relative;
+  top:100vh;
+  width:100%;
 }
 
 footer li,
