--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -56,7 +56,31 @@ body {
   max-width: 1400px;
   margin: 0 auto;
   padding: 20px 10px;
-  margin-top:120px;
+  margin-top:120px; 
+}
+img{
+  width: 100%;
+  max-width: 350px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  
+}
+.images-cafe img{
+  position:absolute;
+  top:400px;
+}
+.images-store img{
+  position:absolute;
+  top:800px;
+}
+.images-cafe::after{
+  content: "";
+  width: 350px;
+}
+.images-store::after{
+  content: "";
+  width: 350px;
 }
 
 .gallery img {
