--- a/Main/assets/css/utilities.css
+++ b/Main/assets/css/utilities.css
@@ -4,8 +4,8 @@
     padding: 0 40px; overflow: auto;
 }
 
-.container-min { max-width: 1300px; margin: 0 auto; }
-.clr-whitish{color:rgb(205, 194, 180);}
+.container-min { max-width: 100%; margin: 0 auto; }
+.clr-white{color:rgb(255, 255, 255);}
 .clr-red { color: rgb(255, 0, 0); }
 .clr-purple { color: rgb(222, 46, 116); }
 .clr-black { color: #333;}
