--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -35,18 +35,44 @@ html {
 }
 
 body {
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   font-family: Verdana, sans-serif;
   line-height: 1.6;
   font-size: 1rem;
   color: #333;
 }
 .heading{
-  color:rgb(255, 255, 255);
+  color:rgb(72, 68, 68);
   text-align:center;
-  background-color:red ;
-  padding:20px;
+  background-color:#ffffff ;
+  padding:200px;
   width:100%;
+}
+.heading-img img{
+  
+  width:auto;
+  height:auto
+}
+.heading-a{
+  margin-top:20px;
+  margin-bottom:0;
+  padding-bottom: 0;
+  font-family:poppins;
+  font-size:40px;
+}
+.heading-b{
+  padding-top:0;
+  margin-top:-30px;
+  font-family: "carter one";
+  font-size:100px;
+  font-weight:bold ;
+}
+.border{
+  border-bottom:4px solid red;
+}
+.heading-c{
+  font-family:"carter one";
+  font-size: 50px;
 }
 /* Scroll Bar */
 ::-webkit-scrollbar {
@@ -525,8 +551,9 @@ span {
 
 .hero p {
   display: flex;
-  justify-content: center; 
-  font-size: 16px;
+  justify-content: center;
+  font-family: poppins; 
+  font-size: 20px;
   text-align: center;
   padding-top:18px;
   padding-left:60px;
@@ -620,9 +647,8 @@ footer {
   background-color: #171819;
   color: #fff;
   padding: 70px 0;
-  position:relative;
-  top:100vh;
-  width:100%;
+  
+  margin-top:100%;
 }
 
 footer li,
