--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -773,7 +773,7 @@ footer .deep-devs a {
 }
 
 .menu-hero {
-  background: url("https://images.collegedunia.com/public/college_data/images/campusimage/15873158377.png") center/cover no-repeat;
+  background: url("https://www.questrmg.com/wp-content/uploads/2019/03/web-banner-Top-Three-Restaurant-Trends.jpg") center/cover no-repeat;
   min-height: calc(95vh - 60px);
   display: flex;
   align-items: center;
