--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -42,17 +42,20 @@ body {
   color: #333;
 }
 .heading{
-  color:rgb(72, 68, 68);
-  text-align:center;
-  background-color:#ffffff ;
-  padding:200px;
-  width:100%;
+  width:700px;
+  height:220px;
+  background-color:rgba(236, 236, 236, 0.811);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  position: absolute;
+  top:300px;
+  left:400px;
+  border-radius:20px;
 }
-.heading-img img{
-  
-  width:auto;
-  height:auto
-}
+
 .heading-a{
   margin-top:20px;
   margin-bottom:0;
@@ -780,11 +783,15 @@ footer .deep-devs a {
   justify-content: center;
 }
 
-.menu-hero .banner,
+.menu-hero .banner{
+  color:rgb(72, 68, 68);
+  text-align:center;
+  padding:200px;
+  width:100%;
+}
 .main-img .banner {
-  display: inline-block;
   padding: 2rem;
-  background-color: rgba(245, 243, 243, 0.842);
+  
   color: #333;
   text-align: center;
   max-width: 30rem;
@@ -805,7 +812,7 @@ footer .deep-devs a {
 .main-img .banner {
   display: inline-block;
   padding: 2rem;
-  background-color: rgba(245, 243, 243, 0.842);
+  
   color: #333;
   text-align: center;
   max-width: 30rem;
