--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -50,7 +50,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
-  position: absolute;
+  position: static;
   top:280px;
   left:350px;
   border-radius:20px;
