--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -41,18 +41,18 @@ body {
   font-size: 1rem;
   color: #333;
 }
+.banner{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .heading{
   width:700px;
   height:220px;
   background-color:rgba(236, 236, 236, 0.811);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  position: static;
-  top:280px;
-  left:350px;
+  
   border-radius:20px;
 }
 
@@ -68,7 +68,8 @@ body {
   margin-top:-30px;
   font-family: "carter one";
   font-size:100px;
-  font-weight:bold ;
+  font-weight:bold;
+  
 }
 .border{
   border-bottom:4px solid red;
@@ -793,7 +794,9 @@ footer .deep-devs a {
 }
 .main-img .banner {
   padding: 2rem;
-  
+  display:flex;
+  justify-content: center;
+  align-items: center;
   color: #333;
   text-align: center;
   max-width: 30rem;
