--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -51,11 +51,12 @@ body {
   font-family:poppins;
   font-size:40px;
   text-align:center;
+  color:red;
 }
 .heading-b{
   padding-top:0;
   margin-top:-30px;
-  font-family: "carter one";
+  font-family: "serif";
   font-size:100px;
   font-weight:bold;
   text-align:center;
