--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -84,8 +84,16 @@ body {
 .cafe-hero .banner{
   color:rgb(72, 68, 68);
   text-align:center;
+
   padding:200px;
   width:70%;
+
+  
+  width:700px;
+  background-color: rgba(236, 236, 236, 0.811);
+  height: 280px;
+  border-radius: 20px;
+
 }
 /* Scroll Bar */
 ::-webkit-scrollbar {
