--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -233,7 +233,7 @@ button {
 .modal-container {
   position: absolute;
   left: 50%;
-  top: 45%;
+  top: 50%;
   overflow: visible;
   transform: translate(-50%, -50%);
   display: grid;
@@ -296,6 +296,7 @@ button {
   right: 12px;
   top: 10px;
   cursor: pointer;
+  text-align:center;
 }
 
 /* -------- ---Cart System --------------- */
