--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -1101,3 +1101,17 @@ tr {
   background-color: #fdfdfd;
   padding: 20px;
 }
+
+.removeButton {
+  background-color: #000000;
+  color: #ffffff;
+  border: none;
+  padding: 5px 10px;
+  margin-top: 5px;
+}
+
+.userDetailsContainer {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
